--- a/modes/travelready/config/travelready.yaml
+++ b/modes/travelready/config/travelready.yaml
@@ -1,8 +1,20 @@
 #config_version=5
 mode:
     start_events: travel_ready, nethermode_ready
-    stop_events: travel_collected
+    stop_events: nether_started
     priority: 2100
+    restart_on_next_ball: true
+
+shots:
+ shot_travel:
+    switch: s_portal
+
+sound_player: 
+ mode_travelready_started: voice_travel_ready
+
+event_player:
+  shot_travel_hit:
+    nether_started
 
 
 show_player:
