--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,9 +1,9 @@
 events:
-  game_ended: 246
-  game_started: 1106
+  game_ended: 248
+  game_started: 1117
 player:
   score:
-    average: 11274994.007490637
+    average: 11203292.936802972
     top:
     - 492815500
     - 353326850
@@ -15,17 +15,17 @@ player:
     - 42114500
     - 37197000
     - 37146400
-    total: 267
+    total: 269
 shots:
   award_extraball: 98
   captiveball: 932
   centertarget: 1541
-  collectitem1: 4813
-  collectitem2: 4750
-  collectitem3: 3576
-  collectitem4: 4522
+  collectitem1: 4893
+  collectitem2: 4831
+  collectitem3: 3656
+  collectitem4: 4602
   collectitem5: 1881
-  collectitem_special: 2033
+  collectitem_special: 2040
   craft1: 653
   craft2: 705
   craft3: 685
@@ -49,9 +49,9 @@ shots:
   enderdragon_shot8: 104
   enderdragon_shot9: 112
   eyespinner: 672
-  leftslingshot: 6217
-  loopleft: 5282
-  loopright: 4390
+  leftslingshot: 6220
+  loopleft: 5312
+  loopright: 4414
   mb_drop1: 474
   mb_drop2: 1474
   mb_drop3: 1271
@@ -60,16 +60,16 @@ shots:
   mb_drop6: 694
   mb_jackpot: 31
   mb_superjackpot: 55
-  mbnether_drop2: 313
-  mbnether_drop3: 284
-  mbnether_drop4: 92
-  mbnether_drop5: 321
-  mbnether_jackpot: 3
+  mbnether_drop2: 325
+  mbnether_drop3: 296
+  mbnether_drop4: 97
+  mbnether_drop5: 329
+  mbnether_jackpot: 4
   mbnether_superjackpot: 12
-  popbumper1: 6641
-  popbumper2: 9572
-  popbumper3: 12166
-  rightslingshot: 4612
+  popbumper1: 6649
+  popbumper2: 9595
+  popbumper3: 12190
+  rightslingshot: 4619
   set1_center: 81
   set1_left: 181
   set1_right: 326
@@ -82,70 +82,71 @@ shots:
   set4_center: 69
   set4_left: 47
   set4_right: 165
+  shot_travel: 11
   shot_victoryloopleft: 10
   shot_victoryloopright: 13
-  skill_scoup: 564
-  spinner: 25869
+  skill_scoup: 568
+  spinner: 25877
   strongholdtravel: 41
-  tool1: 2361
-  tool2: 3017
-  tool3: 1933
+  tool1: 2365
+  tool2: 3018
+  tool3: 1936
   victoryloopleft_shot: 179
   victoryloopright_shot: 106
   village_jackpot: 22
   villager_jackpot: 161
   villager_spinner: 114
   world_jackpot: 499
-  worldspinner: 2686
+  worldspinner: 2691
 switches:
-  s_bumperrail: 8087
+  s_bumperrail: 8099
   s_captiveball: 933
-  s_centertarget: 6050
-  s_collectitem1: 8289
-  s_collectitem2: 8342
-  s_collectitem3: 5356
-  s_collectitem4: 7981
-  s_collectitem5: 7655
+  s_centertarget: 6068
+  s_collectitem1: 8396
+  s_collectitem2: 8442
+  s_collectitem3: 5367
+  s_collectitem4: 8107
+  s_collectitem5: 7770
   s_credit_right: 0
-  s_drop1: 3319
-  s_drop2: 5177
-  s_drop3: 18036
-  s_drop4: 3274
-  s_drop5: 6987
-  s_drop6: 4518
-  s_left_flipper: 43348
-  s_leftinlane: 960
+  s_drop1: 3348
+  s_drop2: 5226
+  s_drop3: 18139
+  s_drop4: 3303
+  s_drop5: 7039
+  s_drop6: 4562
+  s_left_flipper: 43498
+  s_leftinlane: 961
   s_leftoutlane: 818
-  s_leftsling: 6220
-  s_loopleft: 5621
-  s_loopright: 5153
+  s_leftsling: 6223
+  s_loopleft: 5651
+  s_loopright: 5177
   s_maint: 0
-  s_plungerlane: 4551
-  s_popbumper1: 6641
-  s_popbumper2: 9572
-  s_popbumper3: 12167
-  s_portal: 573
-  s_right_flipper: 37210
-  s_rightinlane: 228
+  s_plungerlane: 4579
+  s_popbumper1: 6649
+  s_popbumper2: 9595
+  s_popbumper3: 12191
+  s_portal: 609
+  s_right_flipper: 37292
+  s_rightinlane: 229
   s_rightoutlane: 391
-  s_rightsling: 4612
-  s_scoup: 2647
-  s_spinner: 25872
+  s_rightsling: 4619
+  s_scoup: 2672
+  s_spinner: 25880
   s_start: 63
   s_tilt: 0
-  s_tooltarget1: 3628
-  s_tooltarget2: 4496
-  s_tooltarget3: 2900
-  s_topbumperleft: 2200
-  s_topbumperright: 3187
-  s_topkicker: 8073
-  s_trough1: 4164
-  s_trough2: 3398
-  s_trough3: 3013
-  s_trough4: 2650
-  s_troughjam: 3451
-  s_upperdrop: 3203
-  s_whitedot1: 1505
-  s_whitedot2: 1811
-  s_whitedot3: 1815
-  s_whitedot4: 1752
+  s_tooltarget1: 3632
+  s_tooltarget2: 4510
+  s_tooltarget3: 2904
+  s_topbumperleft: 2213
+  s_topbumperright: 3202
+  s_topkicker: 8095
+  s_trough1: 4193
+  s_trough2: 3424
+  s_trough3: 3030
+  s_trough4: 2667
+  s_troughjam: 3476
+  s_upperdrop: 3228
+  s_whitedot1: 1508
+  s_whitedot2: 1820
+  s_whitedot3: 1818
+  s_whitedot4: 1755
