--- a/modes/world4/config/world4.yaml
+++ b/modes/world4/config/world4.yaml
@@ -26,7 +26,6 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
-  world4_collected: travel_ready
   
 variable_player:
   #setup environment variables
@@ -91,16 +90,12 @@ variable_player:
 
 widget_player:
   mode_world4_started:
-    widget_screenbackground:
+    widget_videobackground:
       action: update
       slide: world_slide
       widget_settings:
-        image: world4_background
-  #   widget_videobackground:
-  #     action: add
-  #     slide: world_slide
-  #     widget_settings:
-  #       video: world4_overview
+        video: video_world4_overview
+        auto_play: true
     widget_item1icon:
       action: update
       slide: world_slide
