--- a/modes/world5/config/world5.yaml
+++ b/modes/world5/config/world5.yaml
@@ -26,7 +26,6 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
-  world5_collected: travel_ready
 
 variable_player:
  #setup environment variables
@@ -91,16 +90,12 @@ variable_player:
 
 widget_player:
   mode_world5_started:
-    widget_screenbackground:
+    widget_videobackground:
       action: update
       slide: world_slide
       widget_settings:
-        image: world5_background
-    # widget_videobackground:
-    #   action: add
-    #   slide: world_slide
-    #   widget_settings:
-    #     video: world5_overview
+        video: video_world5_overview
+        auto_play: true
     widget_item1icon:
       action: update
       slide: world_slide
