--- a/modes/attract/config/attract.yaml
+++ b/modes/attract/config/attract.yaml
@@ -5,3 +5,107 @@ show_player:
   mode_attract_started.1: 
     attract_mode_shows:
       loops: -1
+
+slides:
+  attract_slide:
+    widgets:
+      - type: video
+        video: video_allworlds_overview
+        auto_play: true
+        end_behavior: loop
+        z: 6
+      - type: image        #ITEM BACKGROUND
+        image: Pincraft_Logo_Full
+        anchor_x: center
+        anchor_y: center
+        y: center
+        x: center
+        z: 10 
+
+slide_player:
+  mode_attract_started:
+    attract_slide
+
+widgets:
+  widget_pressstart:
+    - type: Text
+      text: PRESS  START
+      font_name: lazer84
+      font_size: 100
+      z: 100
+      animations:
+        attract_slide:
+          - property: opacity
+            value: 0
+            duration: .5s
+          - property: opacity
+            value: 1
+            duration: .5s
+            repeat: true   
+
+  widget_createdby:
+    - type: Text
+      text: "Created by\nBrian Smith\nConnor Smith\nGwen Smith"
+      font_size: 60
+      font_name: lazer84
+      color: white
+      z: 100
+
+  widget_previousscores:
+    - type: Text
+      text: "Previous Scores"
+      font_size: 60
+      font_name: lazer84
+      color: white
+      z: 100
+    - type: text        #PLAYER 1 SCORE
+      text: PLAYER 1 - (machine|player1_score)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+260
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #PLAYER 2 SCORE
+      text: PLAYER 2 - (machine|player2_score)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+200
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #PLAYER 3 SCORE
+      text: PLAYER 3 - (machine|player3_score)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+140
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: text        #PLAYER 4 SCORE
+      text: PLAYER 4 - (machine|player4_score)
+      number_grouping: true
+      min_digits: 2
+      font_name: ARLRDBD
+      font_size: 25
+      y: bottom+80
+      x: left+50
+      z: 100
+      anchor_x: left
+      anchor_y: top
+    - type: image
+      image: score_background
+      anchor_x: left
+      anchor_y: bottom
+      y: bottom+15
+      x: left+15
+      z: 10
