--- a/modes/travelready/config/travelready.yaml
+++ b/modes/travelready/config/travelready.yaml
@@ -1,21 +1,21 @@
 #config_version=5
 mode:
-    start_events: travel_ready, nethermode_ready
+    start_events: travel_ready, nethermode_ready, stronghold_ready
     stop_events: nether_started, stronghold_started
     priority: 2100
     restart_on_next_ball: true
 
-shots:
- shot_travel:
-    switch: s_portal
+# shots:
+#  shot_travel:
+#     switch: s_portal
 
 sound_player: 
  mode_travelready_started: voice_travel_ready
 
 event_player:
-  shot_travel_hit{current_player.world_id != 5}:
+  sshot_travel_hit{current_player.world_id != 5}:
     nether_started
-  shot_travel_hit{current_player.world_id==5}:
+  sshot_travel_hit{current_player.world_id==5}:
     stronghold_started
 
 
