--- a/modes/nethercontroller/config/nethercontroller.yaml
+++ b/modes/nethercontroller/config/nethercontroller.yaml
@@ -25,3 +25,28 @@ multiball_locks:
     enable_events: mode_nethercontroller_started
     disable_events: nethermode_start, nethermode_disable, multiball_villagermb_started, multiball_nightmb_started, multiball_nightvillagermb_started, multiball_lock_nightvillagerlock1_full
   
+show_player:
+  balldevice_bd_trough_ball_eject_attempt{num_attempts==0 and device.multiball_locks.netherlock.locked_balls==1 and current_player.world_id==1}:
+    show_travelworld1:
+      loops: 0
+      speed: 1
+      block_queue: true
+      events_when_completed: nether_ready
+  balldevice_bd_trough_ball_eject_attempt{num_attempts==0 and device.multiball_locks.netherlock.locked_balls==1 and current_player.world_id==2}:
+    show_travelworld2:
+      loops: 0
+      speed: 1
+      block_queue: true
+      events_when_completed: nether_ready
+  balldevice_bd_trough_ball_eject_attempt{num_attempts==0 and device.multiball_locks.netherlock.locked_balls==1 and current_player.world_id==3}:
+    show_travelworld3:
+      loops: 0
+      speed: 1
+      block_queue: true
+      events_when_completed: nether_ready
+  balldevice_bd_trough_ball_eject_attempt{num_attempts==0 and device.multiball_locks.netherlock.locked_balls==1 and current_player.world_id==4}:
+    show_travelworld4:
+      loops: 0
+      speed: 1
+      block_queue: true
+      events_when_completed: nether_ready
